Fix img alignment in dashboard css.

--- a/olof/plugins/dashboard/static/style.css
+++ b/olof/plugins/dashboard/static/style.css
@@ -251,6 +251,13 @@ h2:hover {
     line-height: 165%;
 }
 
+img {
+    vertical-align: text-top;
+    margin-right: 8px;
+    margin-left: 8px;
+    border-style: none;
+}
+
 .block_title {
     float: left;
 }
